--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -13,8 +13,8 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: hello
-    if: ${{ needs.hello.result == 'success' }}
+    #needs: hello
+    #if: ${{ needs.hello.result == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
