--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,14 @@
 name: CI Workflow
-on: 
-    repository_dispatch:
-        types: [test-event]
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch: {}
+  repository_dispatch:
+    types: [test-event]
+
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: CheckoutBuild
-              run: echo "Building..."
-            
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: CheckoutBuild
+        run: echo "Building..."
