--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,15 @@
+
 name: CI Workflow
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch: {}
-  repository_dispatch:
-    types: [test-event]
+
+on: push
 
 jobs:
+
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: CheckoutBuild
-        run: echo "Building..."
+      - name: Build Project
+
+        run: echo "Building proyect...."
