--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,10 @@
 name: CI Workflow
 
 on: 
-    pull_request:
-      types: [opened, closed]
+    #pull_request:
+     # types: [opened, closed]
+     shcedule:
+       - cron: '*/3 * * * *'  # Runs every 3 minutes
 
 jobs:
 
