--- a/.github/workflows/ci copy.yml
+++ b/.github/workflows/ci copy.yml
@@ -1,8 +1,12 @@
 
 name: CI Workflow
 
-on: push
-
+on: 
+    #pull_request:
+     # types: [opened, closed]
+     #schedule:
+      # - cron: '*/3 * * * *'  # Runs every 3 minutes
+    branches: [develop]
 jobs:
 
   build:
