--- a/.github/workflows/ci copy.yml
+++ b/.github/workflows/ci copy.yml
@@ -1,12 +1,13 @@
 
 name: CI Workflow
 
-on: 
-    #pull_request:
-     # types: [opened, closed]
-     #schedule:
-      # - cron: '*/3 * * * *'  # Runs every 3 minutes
-    branches: [develop]
+on:
+  push:
+    branches: [main]
+  #pull_request:
+    # types: [opened, closed]
+  #schedule:
+    # - cron: '*/3 * * * *'  # Runs every 3 minutes
 jobs:
 
   build:
