--- a/.github/workflows/ci copy.yml
+++ b/.github/workflows/ci copy.yml
@@ -3,8 +3,10 @@ name: CI Workflow
 
 on:
   push:
-    branches: [main]
-  #pull_request:
+    #branches: [main]
+    branches-ignore: [main]
+  
+    #pull_request:
     # types: [opened, closed]
   #schedule:
     # - cron: '*/3 * * * *'  # Runs every 3 minutes
