--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,22 @@
 
 name: CI Workflow
 
-on: 
-    pull_request:
-      types: [opened, closed]
-
+on:
+  push:
+    #branches: [main]
+    #branches-ignore:
+    branches:
+      - develop
+      - main
+      - "release/*"
+    paths:
+      - '.github/workflows/**'
+      
+  
+    #pull_request:
+    # types: [opened, closed]
+  #schedule:
+    #- cron: '*/3 * * * *'  # Runs every 3 minutes
 jobs:
 
   build:
