--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    if: ${{github.event_name == 'push'}}
     steps:
       - name: Build Project
 
