--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,15 +2,17 @@
 name: CI Workflow
 
 
-on: 
-  workflow_dispatch:
-  push:
-    branches:
-      - develop
-  pull_request:
-    types: [opened, closed]
-    branches:
-     - main
+on:
+  release:
+    types: [created]
+  #workflow_dispatch:
+  #push:
+  #  branches:
+  #    - develop
+  #pull_request:
+  #  types: [opened, closed]
+  #  branches:
+  #   - main
 
      #schedule:
       #- cron: '*/3 * * * *'  # Runs every 3 minutes  
@@ -24,7 +26,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    if: ${{github.event_name == 'push'}}
     steps:
       - name: Build Project
 
