--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,10 @@ name: CI Workflow
 
 
 on:
-  release:
-    types: [created]
+  issues:
+    types: [opened, closed]
+  #release:
+   # types: [created]
   #workflow_dispatch:
   #push:
   #  branches:
