--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ name: CI Workflow
 
 on:
   issues:
-    types: [opened, closed]
+    types: [opened, closed,reopened]
   #release:
    # types: [created]
   #workflow_dispatch:
