--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,13 @@ jobs:
     test:
       runs-on: ubuntu-latest
       steps:
+        - name: checkout code
+          run: |
+            git init
+            git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+            git fetch origin ${{ github.ref }} --depth=1
+            git checkout FETCH_HEAD
+            ls -la
         - name: Install dependencies
           run: |
             echo "Installing dependencies...."
