--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,16 +10,18 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - name: checkout code
-          run: |
-            git init
-            git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-            git fetch origin ${{ github.ref }} --depth=1
-            git checkout FETCH_HEAD
-            ls -la
+          uses: actions/checkout@v5
+          #run: |
+          #  git init
+          #  git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+          #  git fetch origin ${{ github.ref }} --depth=1
+          #  git checkout FETCH_HEAD
+          #  ls -la
         - name: Install dependencies
-          run: |
-            echo "Installing dependencies...."
-            echo "status=sucess" >> $GITHUB_OUTPUT
+          uses: actions/setup-python@v4
+          #run: |
+          #  echo "Installing dependencies...."
+          #  echo "status=sucess" >> $GITHUB_OUTPUT
           id: step1
           #run: |
           #  print("Installing dependencies....")
