--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
       steps:
         - name: checkout code
           uses: actions/checkout@v5
+          with:
+            fetch-depth: '1'
           #run: |
           #  git init
           #  git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
@@ -19,6 +21,8 @@ jobs:
           #  ls -la
         - name: Install dependencies
           uses: actions/setup-python@v4
+          with:
+            python-version: '3.12'
           #run: |
           #  echo "Installing dependencies...."
           #  echo "status=sucess" >> $GITHUB_OUTPUT
