--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
       runs-on: ubuntu-latest
       env:
         TEST_LEVEL: "unit"
+      environment: staging
       steps:
         - name: checkout code
           uses: actions/checkout@v5
